# 6.0-wip

./: .gitignore  CMakeLists.txt  Readme.md
Data/: dolphin-fm.desktop
Source/: dolphin-emu.sln
Source/Android/jni/: CMakeLists.txt
Source/Core/AudioCommon/: AudioCommon.cpp
Source/Core/Common/: CommonPaths.h  File.cpp  File.h  LinearDiskCache.h  UPnP.cpp  Version.cpp  Version.h  make_scmrev.h.js  scmrev.h.in
Source/Core/Common/Config/: Enums.h
Source/Core/Core/: Analytics.cpp  BootManager.cpp  CMakeLists.txt  ConfigManager.cpp  ConfigManager.h  Core.vcxproj  Core.vcxproj.filters  GeckoCode.cpp  Movie.cpp  Movie.h  NetPlayClient.cpp  NetPlayClient.h  NetPlayProto.h  NetPlayServer.cpp  NetPlayServer.h  State.cpp
Source/Core/Core/Config/: FMSettings.cpp  FMSettings.h  GraphicsSettings.cpp  MainSettings.cpp  MainSettings.h  NetplaySettings.cpp
Source/Core/Core/ConfigLoaders/: GameConfigLoader.cpp  GameConfigLoader.h  MovieConfigLoader.cpp  NetPlayConfigLoader.cpp
Source/Core/Core/HW/: VideoInterface.cpp  VideoInterface.h
Source/Core/Core/Slippi/: SlippiReplayComm.cpp  SlippiReplayComm.h
Source/Core/DolphinNoGUI/: CMakeLists.txt
Source/Core/DolphinQt/: AboutDialog.cpp  CMakeLists.txt  Info.plist.in  Main.cpp  MainWindow.cpp  RenderWidget.cpp  Settings.cpp  Settings.h  Translation.cpp  Updater.cpp
Source/Core/DolphinQt/Config/: GameConfigWidget.cpp  GameConfigWidget.h
Source/Core/DolphinQt/NetPlay/: NetPlayDialog.cpp  NetPlayDialog.h
Source/Core/UICommon/: AutoUpdate.cpp  CommandLineParse.cpp  DiscordPresence.cpp  UICommon.cpp
(+13 files in other folders)
